--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
 		"dev": "turbo dev",
 		"build": "turbo build",
 		"check-types": "turbo check-types",
-		"dev:native": "turbo -F native dev",
 		"dev:web": "turbo -F web dev",
-		"dev:server": "turbo -F server dev"
+		"dev:docs": "pnpm --filter ./apps/docs exec mint dev"
 	},
 	"dependencies": {},
 	"devDependencies": {
