chores: update readme file

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"check-types": "turbo check-types",
 		"dev:client": "pnpm --filter client exec expo start",
 		"dev:web": "turbo run dev --filter=web",
-		"dev:docs": "pnpm --filter docs exec mint dev"
+		"dev:docs": "pnpm --filter docs exec mintlify dev"
 	},
 	"dependencies": {},
 	"devDependencies": {
