--- a/.github/workflows/main-branch-notification.yml
+++ b/.github/workflows/main-branch-notification.yml
@@ -6,9 +6,9 @@ on:
 
 jobs:
   discord-merge-notification:
-    uses: T-ESP-ASSTAGJ/infra/.github/workflows/discord-merge-notification.yml@main
+    uses: T-ESP-ASSTAGJ/infra/.github/workflows/discord-notification.yml@main
     with:
-      repository_name: "client"
-      event_type: "merge"
+      repository_name: "api"
+      target_branch: ${{ github.ref_name }}
     secrets:
       DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
