--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -69,11 +69,13 @@
 		"react-native-gesture-handler": "~2.26.0",
 		"react-native-ios-context-menu": "3.1.0",
 		"react-native-ios-utilities": "5.1.2",
+		"react-native-pager-view": "6.7.1",
 		"react-native-reanimated": "3.18.0",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-svg": "^15.12.0",
 		"react-native-svg-transformer": "^1.5.0",
+		"react-native-tab-view": "^4.1.3",
 		"react-native-web": "~0.20.0",
 		"react-native-webview": "13.13.5",
 		"reanimated-color-picker": "^4.0.1",
