--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -38,7 +38,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"expo": "54.0.0-canary-20250613-b29d676",
+		"expo": "^53.0.20",
 		"expo-av": "15.1.7-canary-20250613-b29d676",
 		"expo-blur": "14.1.6-canary-20250613-b29d676",
 		"expo-build-properties": "0.14.7-canary-20250613-b29d676",
@@ -62,15 +62,15 @@
 		"lottie-react-native": "^7.2.2",
 		"lucide-react-native": "^0.487.0",
 		"nativewind": "^4.1.23",
-		"react": "19.1.0",
+		"react": "19.0.0",
 		"react-dom": "19.1.0",
-		"react-native": "0.80.0",
+		"react-native": "0.79.0",
 		"react-native-bouncy-checkbox": "^4.1.2",
 		"react-native-gesture-handler": "~2.26.0",
 		"react-native-ios-context-menu": "3.1.0",
 		"react-native-ios-utilities": "5.1.2",
 		"react-native-pager-view": "6.7.1",
-		"react-native-reanimated": "3.18.0",
+		"react-native-reanimated": "3.17.5",
 		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.11.1",
 		"react-native-svg": "^15.12.0",
